--- a/app/src/main/res/layout/fragment_details_new.xml
+++ b/app/src/main/res/layout/fragment_details_new.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.detailsnews.DetailsNewFragment">
+    tools:context=".presentation.detailsnew.DetailsNewFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="Детальное описание" />
 
 </FrameLayout>
