--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".presentation.news.NewsFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/openLive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="live"/>
 
-</FrameLayout>
+    <Button
+        android:id="@+id/openDetailsNews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="details"/>
+
+</LinearLayout>
