--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".presentation.news.NewsFragment">
-
-    <Button
-        android:id="@+id/openLive"
-        android:layout_width="wrap_content"
+    android:background="@color/background">
+    
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/newsToolbar"
+        style="?attr/toolbarStyle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="live"/>
+        android:elevation="4dp"/>
 
     <Button
         android:id="@+id/openDetailsNews"
