--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#E0E0E0</color>
+    <color name="colorAccent">#0075EE</color>
+    <color name="colorAccentDark">#2E4467</color>
+
+    <color name="colorTextPrimary">#000000</color>
+    <color name="colorTextSecondary">#6f6f6f</color>
+
+    <color name="background">#ffffff</color>
+
+    <color name="colorTitleToolbar">#000000</color>
+
+    <color name="colorIcon">#000000</color>
+
 </resources>
