--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
 
     <color name="background">#ffffff</color>
     <color name="separate">#99bfbfbf</color>
+    <color name="color_placeholder">#EBEBEB</color>
 </resources>
