--- a/app/src/main/res/layout/item_new.xml
+++ b/app/src/main/res/layout/item_new.xml
@@ -21,13 +21,13 @@
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/iconImageView"
-        android:layout_width="90dp"
+        android:layout_width="130dp"
         android:layout_height="90dp"
         android:layout_marginEnd="8dp"
+        android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/categoryTextView"
-        app:riv_corner_radius="6dp"
-        tools:src="@drawable/ic_launcher_background"/>
+        app:riv_corner_radius="6dp" />
 
     <TextView
         android:id="@+id/titleTextView"
@@ -70,6 +70,7 @@
         tools:text="19 июня 2020, 12:48" />
 
     <View
+        android:id="@+id/separator"
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="4dp"
@@ -79,4 +80,15 @@
         app:layout_constraintStart_toStartOf="@id/descriptionTextView"
         app:layout_constraintTop_toBottomOf="@id/dateTextView" />
 
+    <View
+        android:id="@+id/clickItemView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:background="?attr/selectableItemBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
