Feature(DetailsNew): Настроил экран детального описания новости
-Настроил сохранение позиций прокрутки
-Сделал отображение данных на экране детального описание
-Сделал отправку ссылки на новость

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,7 @@
         <item name="android:theme">?attr/actionBarTheme</item>
         <item name="android:background">@color/background</item>
         <item name="titleTextColor">@color/colorTitleToolbar</item>
+        <item name="android:elevation">4dp</item>
     </style>
 
 </resources>
