--- a/app/src/main/res/layout/item_new.xml
+++ b/app/src/main/res/layout/item_new.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="12dp"
         android:textAllCaps="true"
         android:textColor="@color/colorTextSecondary"
         android:textSize="@dimen/font_small"
@@ -23,7 +23,7 @@
         android:id="@+id/iconImageView"
         android:layout_width="130dp"
         android:layout_height="90dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="12dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/categoryTextView"
@@ -38,6 +38,8 @@
         android:textColor="@color/colorTextPrimary"
         android:textSize="@dimen/font_normal"
         android:textStyle="bold"
+        android:maxLines="3"
+        android:ellipsize="end"
         app:layout_constraintBottom_toBottomOf="@+id/iconImageView"
         app:layout_constraintEnd_toStartOf="@id/iconImageView"
         app:layout_constraintStart_toStartOf="@+id/categoryTextView"
@@ -73,7 +75,7 @@
         android:id="@+id/separator"
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="6dp"
         android:background="@color/separate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@id/dateTextView"
