Feature(Presentation): Сделал помечания прочитанной статьи
-Добавил поле, что статья уже прочитана
-Модифицировал вставку новостей в локальную базу данных, при которой не учитываются статьи, которые были прочитаны

--- a/app/src/main/res/drawable/ic_placeholder.xml
+++ b/app/src/main/res/drawable/ic_placeholder.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/color_placeholder"/>
+    <solid android:color="@color/placeholder"/>
 </shape>
