--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
 
     <color name="background">#ffffff</color>
     <color name="separate">#99bfbfbf</color>
-    <color name="color_placeholder">#EBEBEB</color>
+    <color name="placeholder">#EBEBEB</color>
+    <color name="already_read">#80FFFFFF</color>
 </resources>
