--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,7 @@
     <color name="background">#ffffff</color>
     <color name="separate">#99bfbfbf</color>
     <color name="placeholder">#EBEBEB</color>
+
     <color name="already_read">#80FFFFFF</color>
+    <color name="blackout_for_container_with_control_buttons">#61000000</color>
 </resources>
