Feature(Setting): Создал раздел настроек
-Создал раздел в настройках, где можно изменить тему приложения
-Создал раздел в настройках, где можно отправить отзыв о приложении
-Создал раздел в настройках с ссылкой на сайт Вести.Ru

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,9 @@
 
     <color name="colorIcon">#000000</color>
 
+    <color name="colorControlNormal">#6f6f6f</color>
+    <color name="colorControlActive">#0075EE</color>
+
     <color name="background">#ffffff</color>
     <color name="separate">#99bfbfbf</color>
     <color name="placeholder">#EBEBEB</color>
