--- a/app/src/main/res/menu/menu_news.xml
+++ b/app/src/main/res/menu/menu_news.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:ignore="AlwaysShowAction" >
 
     <item
         android:id="@+id/openLiveItem"
         android:icon="@drawable/ic_live"
         app:showAsAction="always"
-        android:title=""
-        android:orderInCategory="0"/>
+        android:title=""/>
+
+    <item
+        android:id="@+id/openSettingItem"
+        android:icon="@drawable/ic_setting"
+        app:showAsAction="always"
+        android:title=""/>
 </menu>
