Feature(AppTheme): Настроил темную тему в приложении
-Создал разширения для изменения темы приложения
-Создал ресурсы для темной темы

--- a/app/src/main/res/layout/fragment_details_new.xml
+++ b/app/src/main/res/layout/fragment_details_new.xml
@@ -25,7 +25,8 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/detailsNewToolbar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:background="@color/background"/>
 
         </com.google.android.material.appbar.AppBarLayout>
 
