--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="colorTextSecondary">#6f6f6f</color>
 
     <color name="colorTitleToolbar">#000000</color>
+    <color name="colorBackgroundToolbar">#FFFFFF</color>
 
     <color name="colorIcon">#000000</color>
 
