Feature(News): Добавил фильтрацию данных
-Добавил фильтрацию данных
-Убрал прямой эфир

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -22,4 +22,9 @@
 
     <color name="already_read">#80000000</color>
     <color name="blackout_for_container_with_control_buttons">#61000000</color>
+
+    <color name="colorTextForCategorySelected">#ffffff</color>
+    <color name="colorTextForCategoryNormal">#000000</color>
+    <color name="colorBackgroundForCategorySelected">@color/colorAccent</color>
+    <color name="colorBackgroundForCategoryNormal">#BEF3F3F3</color>
 </resources>
