--- a/app/src/main/res/layout/item_new.xml
+++ b/app/src/main/res/layout/item_new.xml
@@ -5,7 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemNewContainer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/categoryTextView"
@@ -75,12 +78,9 @@
         tools:text="19 июня 2020, 12:48" />
 
     <View
-        android:id="@+id/clickItemView"
+        android:id="@+id/backgroundItemView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:clickable="true"
-        android:focusable="true"
-        android:background="?attr/selectableItemBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
