--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -6,7 +6,8 @@
     android:id="@+id/newsContainerConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/background"
+    android:transitionGroup="true">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/newsToolbar"
