--- a/app/src/main/res/layout/item_new.xml
+++ b/app/src/main/res/layout/item_new.xml
@@ -3,23 +3,39 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/itemNewContainer"
+    android:id="@+id/itemNewRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
     android:background="?attr/selectableItemBackground">
 
+    <ImageView
+        android:id="@+id/alreadyLabelImageView"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_circle"
+        app:layout_constraintBottom_toBottomOf="@+id/categoryTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
     <TextView
         android:id="@+id/categoryTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:layout_marginStart="12dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:textAllCaps="true"
         android:textColor="@color/colorTextSecondary"
         android:textSize="@dimen/font_small"
-        app:layout_constraintStart_toStartOf="parent"
+        android:singleLine="true"
+        android:ellipsize="end"
+        app:layout_constraintEnd_toStartOf="@+id/iconImageView"
+        app:layout_constraintStart_toEndOf="@id/alreadyLabelImageView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="спорт" />
 
@@ -39,6 +55,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="12dp"
         android:textColor="@color/colorTextPrimary"
         android:textSize="@dimen/font_normal"
         android:textStyle="bold"
@@ -46,7 +63,7 @@
         android:ellipsize="end"
         app:layout_constraintBottom_toBottomOf="@+id/iconImageView"
         app:layout_constraintEnd_toStartOf="@id/iconImageView"
-        app:layout_constraintStart_toStartOf="@+id/categoryTextView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoryTextView"
         tools:text="РФС заменил заболевшего корновирусом арбитра матча Арсенал - Спартак" />
 
@@ -77,12 +94,4 @@
         app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
         tools:text="19 июня 2020, 12:48" />
 
-    <View
-        android:id="@+id/backgroundItemView"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
