Refactor(Settings): Отрефакторил приложение

--- a/app/src/main/res/layout/bottom_dialog_filter_news.xml
+++ b/app/src/main/res/layout/bottom_dialog_filter_news.xml
@@ -11,10 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/filter_news"
-        android:textColor="@color/colorTextPrimary"
         android:textSize="@dimen/font_big"
         android:textStyle="bold"
+        android:textColor="@color/colorTextPrimary"
+        android:text="@string/filter_news_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="24dp"
-        android:background="@color/separate"
+        android:background="@color/colorSeparate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/categoriesFlowLayout" />
@@ -47,7 +47,7 @@
         android:id="@+id/verticalSeparate"
         android:layout_width="1dp"
         android:layout_height="30dp"
-        android:background="@color/separate"
+        android:background="@color/colorSeparate"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="12dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,11 +59,11 @@
         android:id="@+id/throwOffTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="@string/filter_throw_off"
-        android:textStyle="bold"
-        android:textColor="@color/colorTextPrimary"
         android:textSize="@dimen/font_small"
         android:textAllCaps="true"
+        android:textStyle="bold"
+        android:textColor="@color/colorTextPrimary"
+        android:text="@string/filter_news_throw_off"
         android:gravity="center"
         android:clickable="true"
         android:focusable="true"
@@ -77,11 +77,11 @@
         android:id="@+id/applyTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="@string/filter_to_apply"
-        android:textStyle="bold"
-        android:textColor="@color/colorTextPrimary"
         android:textSize="@dimen/font_small"
         android:textAllCaps="true"
+        android:textStyle="bold"
+        android:textColor="@color/colorTextPrimary"
+        android:text="@string/filter_news_to_apply"
         android:gravity="center"
         android:clickable="true"
         android:focusable="true"
