--- a/app/src/main/res/layout/fragment_details_new.xml
+++ b/app/src/main/res/layout/fragment_details_new.xml
@@ -6,7 +6,7 @@
     android:id="@+id/detailsNewRootNestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/colorBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/contentConstraintLayout"
@@ -26,7 +26,7 @@
                 android:id="@+id/detailsNewToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/background"/>
+                android:background="@color/colorBackground"/>
 
         </com.google.android.material.appbar.AppBarLayout>
 
