--- a/app/src/main/res/layout/item_separate.xml
+++ b/app/src/main/res/layout/item_separate.xml
@@ -5,4 +5,4 @@
     android:layout_height="1dp"
     android:layout_marginStart="12dp"
     android:layout_marginEnd="12dp"
-    android:background="@color/separate"/>
+    android:background="@color/colorSeparate"/>
