--- a/app/src/main/res/drawable/ic_placeholder.xml
+++ b/app/src/main/res/drawable/ic_placeholder.xml
@@ -3,5 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/placeholder"/>
+    <solid android:color="@color/colorPlaceholder"/>
 </shape>
