--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -6,7 +6,7 @@
     android:id="@+id/settingRootNestedScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
+    android:background="@color/colorBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -72,7 +72,7 @@
                     android:layout_marginStart="41dp"
                     android:layout_marginEnd="40dp"
                     android:layout_marginTop="12dp"
-                    android:background="@color/separate" />
+                    android:background="@color/colorSeparate" />
 
                 <RadioButton
                     android:id="@+id/lightThemeRadioButton"
@@ -94,7 +94,7 @@
                     android:layout_marginStart="41dp"
                     android:layout_marginEnd="40dp"
                     android:layout_marginTop="12dp"
-                    android:background="@color/separate" />
+                    android:background="@color/colorSeparate" />
 
                 <RadioButton
                     android:id="@+id/automaticallyThemeRadioButton"
@@ -125,7 +125,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/separate"
+                android:background="@color/colorSeparate"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -199,7 +199,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/separate"
+                android:background="@color/colorSeparate"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -259,7 +259,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/separate"
+                android:background="@color/colorSeparate"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
